# blocky-web

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.yaml.sample  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  webpack.config.js
src/: web.py
src/static/: index.js  package.json  style.scss  webpack.config.js
src/templates/: admin.html.j2  base.html.j2  block.html.j2
